infrastructure/configs/longhorn/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn
spec:
  parentRefs:
  - name: traefik-gateway 
    namespace: ingress-traefik
  hostnames:
  - "longhorn.flux.techbabette.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
