infrastructure/configs/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare 
  name: longhorn
  namespace: longhorn
spec:
  tls:
    - hosts:
      - longhorn.flux.techbabette.com
      secretName: longhorn-cert
  rules:
  - host: longhorn.flux.techbabette.com
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
